--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@ background-color: none; border:0}
   height: 100%;
   object-fit: cover;
 }
+.swiper-slide .slidewrap{
+  position: relative;
+}
 
 .mySwiper{
   height: 685px; width: 100%;
@@ -57,6 +60,97 @@ background-color: none; border:0}
 .swiper-slide.pic02{
   transform: scale(1);
 }
+.slidewrap{
+  display: block;
+}
+.swiper-slide .txtWrap{
+  position: absolute;
+  top:50%; left: 50%;
+  transform: translate(-50%, -50%);
+  width: 360px; height: 360px;
+  background-color: rgba(0,0,0,0.6);
+}
+.swiper-slide .txtWrap02{
+  position: absolute;
+  top:50%; left: 50%;
+  transform: translate(-50%, -50%);
+}
+.swiper-slide .txtWrap02 h2{font-size: 80px; color: #fff; padding: 0px 0 30px;}
+.swiper-slide .txtWrap02 p{font-size: 30px; color: #fff;  }
+.swiper-slide .txtWrap p{
+  color: #fff;
+  font-size: 70px;
+  margin-top: 30px;
+  font-weight: bold;
+}
+.swiper-slide .txtWrap a{
+  display: block;
+  width: 120px; height: 37px;
+  background-color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  
+  line-height: 37px; text-align: center;
+  border-radius: 20px;
+  margin: 15px auto 0;
+  color: 141c2f;
+}
+.swiper-slide .txtWrap p.txts{
+  font-size: 25px;
+  font-weight: normal;
+  color: #fcc009;
+  margin-top: 10px;
+}
+.swiper-slide .txtWrap::after{
+content: ''; display: block; clear: both;
+}
+ .swiper-slide .txtWrap5{
+  width: 600px; height: 300px;
+  position: absolute;
+  top:50%; left: 50%;
+  transform: translate(-50%, -50%);
+}
+.swiper-slide .txtWrap03{
+ float: left;
+  width: 300px; height: 300px;
+  background-color: rgba(0,0,0,0.6);
+} 
+.swiper-slide .txtWrap03 span{
+  display: block;
+  font-size: 45px;
+  color: #fff;
+  margin: 5px auto;
+  font-weight: bold;
+ } 
+ .swiper-slide .txtWrap03 span:first-child{
+  margin-top: 25px;
+ } 
+.swiper-slide .txtWrap04{
+  float: left;
+  width: 300px; height: 300px;
+  background-color: rgba(255,255,255,0.6);
+}
+.swiper-slide .txtWrap04 p{
+  font-size: 30px;
+  color: #000;
+  font-weight: bold;
+}
+.swiper-slide .txtWrap04 p span{
+  font-size: 45px;
+  color: #000;
+
+}
+ .swiper-slide .txtWrap p span{
+  color: #fcc009;
+}
+:root {
+  --swiper-theme-color: #fff;
+}
+.swiper-slide.pic03{
+  width: 100%;
+  background-color: aqua;
+}
+
+
 
 /* .visual{width:100%; height: 685px; background: url(../img/visual_top.png) no-repeat center;background-size: cover;
    background-color: #6796cf; text-align: center; position: relative;}
@@ -113,8 +207,14 @@ margin-top: 30px;}
 .contents ul li:nth-child(7){background: url(../img/img_07.png) no-repeat center;}
 .contents ul li:nth-child(8){background: url(../img/img_08.png) no-repeat center;}
 .contents ul li a{display: block; width: 255px;
-  height: 55px; background-color:rgba(255, 255, 255, 0); font-size: 19px; color: transparent;position: absolute; bottom: 0; left: 0;text-align: center; line-height: 55px; }
-.contents ul li:hover a{background-color: rgba(255, 255, 255, 0.7); color: #4f5152; 
+  height: 100%; background-color:rgba(255, 255, 255, 0);
+ 
+   font-size: 19px; color: transparent;position: absolute; bottom: 0; left: 0;text-align: center; line-height: 55px; }
+.contents ul li:hover a{
+ 
+  background: url(../img/border.png) no-repeat;
+  background-color: rgba(255, 255, 255, 0.7);
+   color: #4f5152; 
 font-weight: bold;}
 
 .contents .more{display: block; background: url(../img/more.png) no-repeat center; width: 69px; height: 68px; color: transparent; font-size: 0; margin: 100px auto; }
