--- a/css/reset.css
+++ b/css/reset.css
@@ -1,13 +1,14 @@
 @charset "utf-8";
 /*나눔스퀘어 웹폰트 설치파일*/
-@font-face {
+/* @font-face {
   font-family: NanumSquare;
   src: url(font/NanumSquareR.eot); /* IE 6 ~ 8, IE 호환성 보기 */
-  src: local(NanumSquareR),
-       url(font/NanumSquareR.woff2) format('woff2'), /* IE Edge, WOFF2 지원 브라우저 */
-       url(font/NanumSquareR.woff) format('woff'), /* IE 9+, 모던 브라우저 */
+  /* src: local(NanumSquareR), */
+       /* url(font/NanumSquareR.woff2) format('woff2'), IE Edge, WOFF2 지원 브라우저 */
+       /* url(font/NanumSquareR.woff) format('woff'), IE 9+, 모던 브라우저
        url(font/NanumSquareR.ttf) format('truetype');
-}
+} */ 
+
 *{margin: 0; padding: 0;}
 body{font-family: NanumSquare, sans-serif; line-height: 1.35;
 font-size: 19px; color:#333;}
