--- a/css/style.css
+++ b/css/style.css
@@ -150,26 +150,51 @@ content: ''; display: block; clear: both;
   background-color: aqua;
 }
 
+.swiper-slide .txtWrap06{
+  position: absolute;
+  top:20%; left: 50%;
+  transform: translateX(-50%);
+
+}
 
 
-/* .visual{width:100%; height: 685px; background: url(../img/visual_top.png) no-repeat center;background-size: cover;
-   background-color: #6796cf; text-align: center; position: relative;}
-.visual h2{font-size: 100px; color: #fff; padding: 160px 0 30px;}
-.visual p{font-size: 30px; color: #fff;  }
-.visual .paging{height: 69px; background-color:rgba(255, 255, 255, 0.5); position: absolute;; bottom: 0; left: 0;width: 100%;}
+h2{
+  font-size: 120px;
+  color: #fff;
+}
+ h2 span{
+   font-size: 150px;
+   color: #fff;
+ }
+h2::before{
+   content: ''; display: block; clear: both;
+   border-bottom: 1px solid #fff;
+ }
+ h2::after{
+  content: ''; display: block; clear: both;
+  border-top: 1px solid #fff;
+  transform: translateY(-180px);
+}
 
-.visual .paging ul{position: absolute; left: 50%;top:50% ; transform: translate(-50%, -50%);}
-.visual .paging ul:after{content: ''; display: block; clear: both;}
-.visual .paging ul li{float: left; margin-right: 55px; margin-top: 5px;}
-.visual .paging ul li:last-child{margin-right: 0; margin-top: 0;}
-.visual .paging ul li a{display: block; width: 12px; height: 12px;
-   background-color: rgba(255, 255, 255, 1); border-radius: 50%; color: transparent; font-size: 0;  }
+.swiper-slide .txtWrap06 p{
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.swiper-slide .txtWrap06 a.more{
+  display: block;
+  width: 130px;  height: 45px;
+  line-height: 45px; text-align: center;
+  color: #fff;
+  font-size: 15px;
+  margin: 0 auto;
+  border: 1px solid #fff;
+  border-radius: 30px;
+
+}
 
 
-.visual .paging ul li.on a:hover{background-color: #1709a3;}
 
-.visual .paging ul li a.last{ display: block; width: 21px; height: 21px;
-  background: url(../img/stop_button.gif) no-repeat; } */
 
 .contents{padding: 60px 0 100px; text-align: center;}
 
