--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,22 @@ background-color: none; border:0}
   background-color: rgba(0,0,0,0.6);
 }
 .swiper-slide .txtWrap02{
+  width: 660px; height: 360px;
+  background-color: rgba(255, 255, 255, 0.7);
   position: absolute;
   top:50%; left: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 60px;
 }
-.swiper-slide .txtWrap02 h2{font-size: 80px; color: #fff; padding: 0px 0 30px;}
-.swiper-slide .txtWrap02 p{font-size: 30px; color: #fff;  }
+.swiper-slide .txtWrap02 p.txt01{
+  font-size: 30px; color: rgb(13, 5, 54); 
+  padding: 120px 0 20px;
+}
+.swiper-slide .txtWrap02 p.txt02{
+  font-size: 50px;
+   color:  rgb(13, 5, 54); 
+   font-weight: bold; 
+  }
 .swiper-slide .txtWrap p{
   color: #fff;
   font-size: 70px;
